# bounty-guard

./: README.md  pyproject.toml
bounty_guard/: __init__.py  app.py  config.py  github_client.py  llm_classifier.py  models.py  scorer.py  triage.py  webhook_validator.py
tests/: __init__.py  fixtures.py  test_app.py  test_github_client.py  test_llm_classifier.py  test_models.py  test_scorer.py  test_triage.py  test_webhook_validator.py
